--- a/rag-workshop/pyproject.toml
+++ b/rag-workshop/pyproject.toml
@@ -7,4 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "ollama>=0.5.1",
     "qdrant-client>=1.14.2",
+    "torch>=2.7.1",
+    "transformers>=4.52.4",
 ]
